Chonker/Tests/Error/wrong_return_type.chonk
function number one()
{
    return "cope";
}

one();